--- a/index.html
+++ b/index.html
@@ -35,4 +35,26 @@
     </div>
     <div class="member">
         <img src="path/to/image3.jpg" alt="Ngô Tấn Đạt" class="profile-pic">
-        <div class="name">Ngô
+        <div class="name">Ngô Tấn Đạt</div>
+    </div>
+    <div class="member">
+        <img src="path/to/image4.jpg" alt="Nguyễn Ngọc Bảo An" class="profile-pic">
+        <div class="name">Nguyễn Ngọc Bảo An</div>
+    </div>
+    <div class="member">
+        <img src="path/to/image5.jpg" alt="Lê Dương Quốc Bảo" class="profile-pic">
+        <div class="name">Lê Dương Quốc Bảo</div>
+    </div>
+    <div class="member">
+        <img src="path/to/image6.jpg" alt="Bùi Trần Nhật Thương" class="profile-pic">
+        <div class="name">Bùi Trần Nhật Thương</div>
+    </div>
+</div>
+
+<footer id="contact">
+    <p>Liên hệ với tụi mình qua email: <a href="mailto:example@example.com" style="color: #97f7df;">doankhanhjob@gmail.com</a></p>
+    <p>Bản quyền © 2024 Nhóm KHÙNG</p>
+</footer>
+
+</body>
+</html>
